@@ -4,6 +4,7 @@ import android.content.Intent;
 import android.os.IBinder;
 import android.util.Log;
 
+import androidx.room.rxjava3.EmptyResultSetException;
 import androidx.test.core.app.ApplicationProvider;
 import androidx.test.ext.junit.runners.AndroidJUnit4;
 import androidx.test.rule.ServiceTestRule;
@@ -13,9 +14,12 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
+import java.security.SecureRandom;
+import java.sql.Time;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.concurrent.TimeoutException;
 
 import static org.junit.Assert.*;
@@ -29,6 +33,17 @@ public class DataManagerTest {
     @Rule
     public final ServiceTestRule serviceRule = new ServiceTestRule();
 
+
+    private String randomString(int len) {
+        if (len < 0) throw new IllegalArgumentException();
+        SecureRandom random = new SecureRandom();
+        StringBuilder sb = new StringBuilder(len);
+        for (int i = 0; i < len; i++) {
+            sb.append(random.nextInt(37, 127));
+        }
+        return sb.toString();
+    }
+
     @Test
     public void TC_RF_01_01() throws TimeoutException {
         Intent serviceIntent = new Intent(ApplicationProvider.getApplicationContext(), DataManager.class);
@@ -36,6 +51,23 @@ public class DataManagerTest {
         DataManager dataManager = ((DataManager.LocalBinder) binder).getService();
         assertNotNull(dataManager);
 
+        var all_groups = dataManager.getAllGroups().blockingFirst();
+        for(var group : all_groups) {
+            assertTrue(group.getFields().isEmpty());
+        }
+
+        String groupName = "test";
+
+        dataManager.insertGroup(new FieldsGroup(groupName, "")).blockingAwait();
+        dataManager.insertField(new Field("test_addr", 0d, 0d, groupName, CropType.CEREALS)).blockingAwait();
+        dataManager.insertField(new Field("test_addr", 0d, 0d, "Default", CropType.CEREALS)).blockingAwait();
+
+        all_groups = dataManager.getAllGroups().blockingFirst();
+        int n_groups = 0;
+        for(var group : all_groups) {
+            n_groups += group.getFields().size();
+        }
+        assertEquals(2, n_groups);
     }
 
     @Test
@@ -175,7 +207,7 @@ public class DataManagerTest {
         assertEquals(1, alerts.getAlerts().size());
 
         // --- CRITERIO 4: A un campo con almeno un alert, rimuovo tutti gli alert ---
-        dataManager.deleteAlertsToField(Arrays.asList(new Pair<>(1, fieldId))).blockingAwait();
+        dataManager.deleteAlertsToField(List.of(new Pair<>(1, fieldId))).blockingAwait();
 
         // Verifica
         alerts = dataManager.getActivatedAlertsFromField(fieldId).blockingFirst();
@@ -197,7 +229,7 @@ public class DataManagerTest {
         dataManager.insertField(new Field(addressToKeep, 45.2, 12.2, groupName, CropType.CEREALS)).blockingAwait();
 
         // Recuperiamo gli oggetti salvati per avere gli ID corretti
-        GroupWithFields group = dataManager.getGroupByName(groupName).blockingFirst();
+        GroupWithFields group = dataManager.getGroupByName(groupName).blockingGet();
         Field fieldToDelete = null;
         Field fieldToKeep = null;
 
@@ -206,14 +238,14 @@ public class DataManagerTest {
             if (f.getAddress().equals(addressToKeep)) fieldToKeep = f;
         }
 
-        assertNotNull("Il campo da eliminare deve esistere", fieldToDelete);
-        assertNotNull("Il campo da mantenere deve esistere", fieldToKeep);
+        assertNotNull(fieldToDelete);
+        assertNotNull(fieldToKeep);
 
         // --- CRITERIO DI INPUT: Campo da eliminare ---
         dataManager.deleteField(fieldToDelete).blockingAwait();
 
         // --- VERIFICA ASSERZIONI DI OUTPUT ---
-        GroupWithFields groupsAfterDelete = dataManager.getGroupByName(groupName).blockingFirst();
+        GroupWithFields groupsAfterDelete = dataManager.getGroupByName(groupName).blockingGet();
         List<Field> remainingFields = groupsAfterDelete.getFields();
 
         // 1. Il campo viene eliminato permanentemente e non appare più nella lista
@@ -229,7 +261,212 @@ public class DataManagerTest {
         assertTrue("Il campo non selezionato per l'eliminazione deve ancora esistere", stillKept);
     }
 
+    @Test
+    public void TC_RF_04_01() throws TimeoutException {
+        Intent serviceIntent = new Intent(ApplicationProvider.getApplicationContext(), DataManager.class);
+        IBinder binder = serviceRule.bindService(serviceIntent);
+        DataManager dataManager = ((DataManager.LocalBinder) binder).getService();
+        assertNotNull(dataManager);
 
+        String randomString = randomString(new SecureRandom().nextInt(0, 100));
+        //String maxLenString = new String(new char[Integer.MAX_VALUE]);
+
+        dataManager.insertGroup(new FieldsGroup("", "")).blockingAwait();
+        dataManager.insertGroup(new FieldsGroup(randomString, "")).blockingAwait();
+        //dataManager.insertGroup(new FieldsGroup(maxLenString, "")).blockingAwait();
+        dataManager.insertGroup(new FieldsGroup("aa", "")).blockingAwait();
+        boolean check = false;
+        try {
+            dataManager.insertGroup(new FieldsGroup("aa", "")).blockingAwait();
+        } catch (RuntimeException e) {
+            check = true;
+        }
+        var emptyStringGroup = dataManager.getGroupByName("").blockingGet();
+        var randomStringGroup = dataManager.getGroupByName(randomString).blockingGet();
+        //var maxLenStringGroup = dataManager.getGroupByName(maxLenString).blockingFirst();
+        var aaGroup = dataManager.getGroupByName("aa").blockingGet();
+        assertTrue(emptyStringGroup.getGroup().getName().equals(""));
+        assertTrue(randomStringGroup.getGroup().getName().equals(randomString));
+        //assertTrue(maxLenStringGroup.getGroup().getName().equals(maxLenString));
+        assertTrue(aaGroup.getGroup().getName().equals("aa"));
+        assertTrue(check);
+    }
+
+
+    @Test
+    public void TC_RF_04_02() throws TimeoutException {
+        Intent serviceIntent = new Intent(ApplicationProvider.getApplicationContext(), DataManager.class);
+        IBinder binder = serviceRule.bindService(serviceIntent);
+        DataManager dataManager = ((DataManager.LocalBinder) binder).getService();
+        assertNotNull(dataManager);
+
+        String emptyGroupName = "emptyGroupName";
+        String nonEmptyGroupName = "nonEmptyGroupName";
+
+        dataManager.insertGroup(new FieldsGroup(emptyGroupName, "")).blockingAwait();
+        dataManager.insertGroup(new FieldsGroup(nonEmptyGroupName, "")).blockingAwait();
+        dataManager.insertField(new Field("test_addr", 0d, 0d, nonEmptyGroupName, CropType.CEREALS)).blockingAwait();
+
+        // verifica inserimento
+        var emptyGroup = dataManager.getGroupByName(emptyGroupName).blockingGet();
+        var nonEmptyGroup = dataManager.getGroupByName(nonEmptyGroupName).blockingGet();
+
+        assertTrue(emptyGroup.getGroup().getName().equals(emptyGroupName) && emptyGroup.getFields().isEmpty());
+        assertTrue(nonEmptyGroup.getGroup().getName().equals(nonEmptyGroupName)
+        && nonEmptyGroup.getFields().size() == 1);
+
+        var testFieldId = nonEmptyGroup.getFields().get(0).getId();
+
+        // eliminazione gruppo
+        dataManager.deleteGroup(emptyGroup.getGroup()).blockingAwait();
+        dataManager.deleteGroup(nonEmptyGroup.getGroup()).blockingAwait();
+
+        // controllo che i gruppi siano stati eliminati + il gruppo spostato a quello di default
+        boolean checkEmpty = false;
+        boolean checkNonEmpty = false;
+        try {
+            emptyGroup = dataManager.getGroupByName(emptyGroupName).blockingGet();
+        } catch (EmptyResultSetException e) {
+            checkEmpty = true;
+        }
+        try {
+            nonEmptyGroup = dataManager.getGroupByName(nonEmptyGroupName).blockingGet();
+        } catch (EmptyResultSetException e) {
+            checkNonEmpty = true;
+        }
+        assertTrue(checkEmpty && checkNonEmpty);
+        var testField = dataManager.getFieldById(testFieldId).blockingGet();
+        assertTrue(testField.getGroupName().equals("Default"));
+    }
+
+    @Test
+    public void TC_RF_04_03() throws TimeoutException {
+        Intent serviceIntent = new Intent(ApplicationProvider.getApplicationContext(), DataManager.class);
+        IBinder binder = serviceRule.bindService(serviceIntent);
+        DataManager dataManager = ((DataManager.LocalBinder) binder).getService();
+        assertNotNull(dataManager);
+
+        String group1 = "group1";
+        String group2 = "group2";
+        Field testField = new Field("test_addr", 0d, 0d, group1, CropType.CEREALS);
+
+        dataManager.insertGroup(new FieldsGroup(group1, "")).blockingAwait();
+        dataManager.insertGroup(new FieldsGroup(group2, "")).blockingAwait();
+        dataManager.insertField(testField).blockingAwait();
+
+        // caso 1 -> da gruppo utente a gruppo utente
+        testField = dataManager.getGroupByName(group1).blockingGet().getFields().get(0);
+        testField.setGroupName(group2);
+        dataManager.updateField(testField).blockingAwait();
+        testField = dataManager.getGroupByName(group2).blockingGet().getFields().get(0);
+        assertTrue(testField.getGroupName().equals(group2));
+
+        // caso 2 -> assegnamento allo stesso gruppo
+        testField.setGroupName(testField.getGroupName());
+        dataManager.updateField(testField).blockingAwait();
+        testField = dataManager.getGroupByName(group2).blockingGet().getFields().get(0);
+        assertTrue(testField.getGroupName().equals(group2));
+
+        // caso 3 -> da gruppo utente a gruppo di default
+        testField.setGroupName("Default");
+        dataManager.updateField(testField).blockingAwait();
+        testField = dataManager.getGroupByName("Default").blockingGet().getFields().get(0);
+        assertTrue(testField.getGroupName().equals("Default"));
+
+        // caso 4 -> da gruppo di default a gruppo utente
+        testField.setGroupName(group1);
+        dataManager.updateField(testField).blockingAwait();
+        testField = dataManager.getGroupByName(group1).blockingGet().getFields().get(0);
+        assertTrue(testField.getGroupName().equals(group1));
+    }
+
+
+    @Test
+    public void TC_RNF_01_01() throws TimeoutException {
+        Intent serviceIntent = new Intent(ApplicationProvider.getApplicationContext(), DataManager.class);
+        IBinder binder = serviceRule.bindService(serviceIntent);
+        DataManager dataManager = ((DataManager.LocalBinder) binder).getService();
+        assertNotNull(dataManager);
+
+        int iterations = 20; // Numero di campioni
+        long totalDuration = 0;
+        long maxDuration = 0;
+
+        for (int i = 0; i < iterations; i++) {
+            String tempGroupName = "PerfGroup_" + i;
+            long startTime = System.currentTimeMillis();
+
+            // operazione
+            dataManager.insertGroup(new FieldsGroup(tempGroupName, "desc")).blockingAwait();
+
+            long endTime = System.currentTimeMillis();
+            long duration = endTime - startTime;
+            totalDuration += duration;
+            if (duration > maxDuration) {
+                maxDuration = duration;
+            }
+        }
+        long averageDuration = totalDuration / iterations;
+        assertTrue(averageDuration <= 500);
+        assertTrue(maxDuration <= 1000);
+
+        for (int i = 0; i < iterations; i++) {
+            String tempGroupName = "PerfGroup_" + i;
+            long startTime = System.currentTimeMillis();
+
+            // operazione
+            dataManager.getGroupByName(tempGroupName).blockingGet();
+
+            long endTime = System.currentTimeMillis();
+            long duration = endTime - startTime;
+            totalDuration += duration;
+            if (duration > maxDuration) {
+                maxDuration = duration;
+            }
+        }
+        averageDuration = totalDuration / iterations;
+        assertTrue(averageDuration <= 500);
+        assertTrue(maxDuration <= 1000);
+
+        for (int i = 0; i < iterations; i++) {
+            String tempGroupName = "PerfGroup_" + i;
+            long startTime = System.currentTimeMillis();
+
+            // operazione
+            dataManager.insertField(new Field("test", 0d, 0d, tempGroupName, CropType.CEREALS)).blockingAwait();
+
+            long endTime = System.currentTimeMillis();
+            long duration = endTime - startTime;
+            totalDuration += duration;
+            if (duration > maxDuration) {
+                maxDuration = duration;
+            }
+        }
+        averageDuration = totalDuration / iterations;
+        assertTrue(averageDuration <= 500);
+        assertTrue(maxDuration <= 1000);
+
+        for (int i = 0; i < iterations; i++) {
+            String tempGroupName = "PerfGroup_" + i;
+            long startTime = System.currentTimeMillis();
+
+            // operazione
+            dataManager.deleteGroup(dataManager.getGroupByName(tempGroupName).blockingGet().getGroup()).blockingAwait();
+
+            long endTime = System.currentTimeMillis();
+            long duration = endTime - startTime;
+            totalDuration += duration;
+            if (duration > maxDuration) {
+                maxDuration = duration;
+            }
+        }
+        averageDuration = totalDuration / iterations;
+        assertTrue(averageDuration <= 500);
+        assertTrue(maxDuration <= 1000);
+
+    }
+
+    // TODO: finire di testare le prestazioni delle restanti operazioni
 
 
 
